<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_map"
        android:enabled="true"
        android:icon="@drawable/action_map"
        android:title="@string/action_map"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_challenges"
        android:enabled="true"
        android:icon="@drawable/action_challenges"
        android:title="@string/action_challenges"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_stats"
        android:enabled="true"
        android:icon="@drawable/action_stats"
        android:title="@string/action_stats"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_settings"
        android:enabled="true"
        android:icon="@drawable/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_request"
        android:enabled="true"
        android:icon="@drawable/action_request"
        android:title="@string/action_request"
        app:showAsAction="ifRoom" />
</menu>